added login, logout, interceptor

--- a/src/pages/Register/Register.module.scss
+++ b/src/pages/Register/Register.module.scss
@@ -1,24 +1,24 @@
-.auth-form {
-  width: 350px;
-  padding: 40px 35px;
-  background-color: #ffffff;
-  border-radius: 30px;
+// .auth-form {
+//   width: 350px;
+//   padding: 40px 35px;
+//   background-color: #ffffff;
+//   border-radius: 30px;
 
-  & > div:first-child {
-    text-align: center;
+//   & > div:first-child {
+//     text-align: center;
 
-   h1 {
-    margin-bottom: 16px;
-   }
+//    h1 {
+//     margin-bottom: 16px;
+//    }
 
-   h3 {
-    margin-bottom: 25px;
-   }
-  }
+//    h3 {
+//     margin-bottom: 25px;
+//    }
+//   }
 
-  form {
-    div:last-child {
-      margin-top: 18px;
-    }
-  }
-}
+//   form {
+//     div:last-child {
+//       margin-top: 18px;
+//     }
+//   }
+// }
