--- a/src/App.scss
+++ b/src/App.scss
@@ -62,6 +62,31 @@ body {
   color: #6c757d;
 }
 
+.auth-form {
+  width: 350px;
+  padding: 40px 35px;
+  background-color: #ffffff;
+  border-radius: 30px;
+
+  & > div:first-child {
+    text-align: center;
+
+   h1 {
+    margin-bottom: 16px;
+   }
+
+   h3 {
+    margin-bottom: 25px;
+   }
+  }
+
+  form {
+    div:last-child {
+      margin-top: 18px;
+    }
+  }
+}
+
 // .App {
 //   text-align: center;
 // }
